--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ opt-level = "z"   # Optimize for size.
 lto = true        # Enable Link Time Optimization
 codegen-units = 1 # Reduce number of codegen units to increase optimizations.
 # panic = "abort"   # Abort on panic
-strip = true      # Strip symbols from binary
+strip = true # Strip symbols from binary
 
 [dependencies]
 serde_json = "1.0.79"
@@ -19,3 +19,4 @@ cached = "0.34.0"
 toml = "0.5.8"
 encoding = "0.2.33"
 eframe = "0.17.0"
+rayon = "1.5.1"
