--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "jahbo"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 
 [profile.release]
@@ -20,3 +20,4 @@ toml = "0.5.8"
 encoding = "0.2.33"
 eframe = "0.17.0"
 rayon = "1.5.1"
+image = "0.24.1"
