--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,20 +4,20 @@ version = "0.3.0"
 edition = "2021"
 
 [profile.release]
-opt-level = "z"   # Optimize for size.
+opt-level = 2     # Optimize for size.
 lto = true        # Enable Link Time Optimization
 codegen-units = 1 # Reduce number of codegen units to increase optimizations.
 # panic = "abort"   # Abort on panic
 strip = true # Strip symbols from binary
 
 [dependencies]
-serde_json = "1.0.79"
-reqwest = { version = "0.11.9", features = ["json", "blocking"] }
+serde_json = "1.0.81"
+reqwest = { version = "0.11.10", features = ["json", "blocking"] }
 regex = "1.5.5"
 itertools = "0.10.3"
 cached = "0.34.0"
-toml = "0.5.8"
+toml = "0.5.9"
 encoding = "0.2.33"
-eframe = "0.17.0"
-rayon = "1.5.1"
-image = "0.24.1"
+eframe = "0.18.0"
+rayon = "1.5.2"
+image = "0.24.2"
